fix: security issue, which enabled xss atacks

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.27.1",
 		"@types/dat.gui": "^0.7.11",
+		"@types/dompurify": "^3.0.5",
 		"@types/jsonwebtoken": "^9.0.4",
 		"@types/sockjs": "^0.3.35",
 		"@types/sockjs-client": "^1.5.3",
@@ -20,9 +21,9 @@
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
 		"@typescript-eslint/parser": "^6.9.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.52.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.34.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.2.1",
 		"flowbite-svelte": "^0.44.22",
 		"mdsvex": "^0.11.0",
@@ -32,7 +33,7 @@
 		"sass": "^1.69.5",
 		"stylelint": "^16.2.1",
 		"stylelint-config-standard": "^36.0.0",
-		"svelte": "^4.2.2",
+		"svelte": "^4.2.12",
 		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.6.2",
@@ -47,6 +48,7 @@
 		"@uiw/codemirror-theme-github": "^4.21.20",
 		"codemirror": "^6.0.1",
 		"dat.gui": "^0.7.9",
+		"dompurify": "^3.0.9",
 		"jsonwebtoken": "^9.0.2",
 		"sockjs": "^0.3.24",
 		"sockjs-client": "^1.6.1",
